--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d27543c
-	base = e2b1370
+	base = 5431b3e
 	trim = theora_image_transport
-	trimbase = 
+	trimbase = e2b1370
