--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d27543c
-	base = 2d65dc3
+	base = 0d8c864
 	trim = image_transport_plugins
-	trimbase = 
+	trimbase = 2d65dc3
