--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d27543c
-	base = 23ed194
+	base = 5a2972c
 	trim = compressed_image_transport
-	trimbase = 
+	trimbase = 23ed194
