--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d27543c
-	base = 1bd318c
+	base = d07584a
 	trim = compressed_depth_image_transport
-	trimbase = 
+	trimbase = 1bd318c
