--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/compressed_image_transport
-	previous = 
-	base = d22acf71f3f8
+	previous = d22acf71f3f8
+	base = 3a4bd0f9c76c
 	trim = 
 	trimbase = 
