--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/image_transport_plugins
-	previous = 
-	base = 3fedcc297a22
+	previous = 3fedcc297a22
+	base = 9a8bde734e4b
 	trim = 
 	trimbase = 
