--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/theora_image_transport
-	previous = 
-	base = f55a8704dd83
+	previous = f55a8704dd83
+	base = 352ff69d0b28
 	trim = 
 	trimbase = 
