--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/compressed_depth_image_transport
-	previous = 
-	base = 41f76447c680
+	previous = 41f76447c680
+	base = 01a7d4b4ce18
 	trim = 
 	trimbase = 
